--- a/force-app/main/default/classes/KPN_OrderViewOrderItemsCtrl.cls
+++ b/force-app/main/default/classes/KPN_OrderViewOrderItemsCtrl.cls
@@ -2,7 +2,7 @@ public with sharing class KPN_OrderViewOrderItemsCtrl {
     
     @AuraEnabled(cacheable=false)
     public static List<OrderItem> getOrderItems(String orderId) {
-        return OrderItemSelector.getByOrderId(orderId);
+        return KPN_OrderItemSelector.getByOrderId(orderId);
     }
 
     
