--- a/force-app/main/default/classes/KPN_OrderSelectorTest.cls
+++ b/force-app/main/default/classes/KPN_OrderSelectorTest.cls
@@ -13,12 +13,15 @@ private class KPN_OrderSelectorTest {
     static void testGetByIdNull() {
         Id orderId = null;
         Boolean exceptionThrown = false;
+        
+        Test.startTest();
         try {
             KPN_OrderSelector.getById(orderId);
         } catch (KPN_OrderSelector.OrderSelectorException ose) {
             System.debug(ose.getMessage());
             exceptionThrown = true;
         }
+        Test.stopTest();
 
         System.assert(exceptionThrown, 'an exception should be thrown on null id');
     } 
@@ -28,12 +31,15 @@ private class KPN_OrderSelectorTest {
         Id orderId = [SELECT Id FROM Order LIMIT 1].Id;
         Order actualOrder;
         Boolean exceptionThrown = false;
+
+        Test.startTest();
         try {
             actualOrder = KPN_OrderSelector.getById(orderId);
         } catch (KPN_OrderSelector.OrderSelectorException ose) {
             System.debug(ose.getMessage());
             exceptionThrown = true;
         }
+        Test.stopTest();
 
         System.assert(!exceptionThrown, 'no exception should be thrown on valid id');
         System.assertNotEquals(null, actualOrder, 'an order should be returned');
