inserted file headers, documented apex classes

--- a/force-app/main/default/classes/KPN_OrderItemSelector.cls
+++ b/force-app/main/default/classes/KPN_OrderItemSelector.cls
@@ -1,4 +1,16 @@
+/**
+ * @description  : Selector pattern implementation for Order Item
+ * @author       : Konstantin Sitkin
+ * @created by   : 2022-08-09
+**/
 public with sharing class KPN_OrderItemSelector {
+    /**
+    * @description OrderItem Selector by OrderItem.Id
+    * @author Konstantin Sitkin | 2022-08-09 
+    * @param orderItemId 
+    * @return OrderItem 
+    * @throws OrderItemSelectorException 
+    **/
     public static OrderItem getById(String orderItemId) {
         List<OrderItem> orderItems = [
             SELECT Id, Quantity, PricebookEntryId, Product2Id, 
@@ -14,6 +26,12 @@ public with sharing class KPN_OrderItemSelector {
         return orderItems.get(0);
     }
 
+    /**
+    * @description OrderItems Selector by Order.Id
+    * @author Konstantin Sitkin | 2022-08-09 
+    * @param orderId 
+    * @return List<OrderItem> 
+    **/
     public static List<OrderItem> getByOrderId(String orderId) {
         List<OrderItem> orderItems = [
             SELECT Id, Quantity, PricebookEntryId, Product2Id, 
