--- a/force-app/main/default/classes/KPN_OrderItemSelectorTest.cls
+++ b/force-app/main/default/classes/KPN_OrderItemSelectorTest.cls
@@ -1,3 +1,8 @@
+/**
+ * @description  : KPN_OrderItemSelector Test
+ * @author       : Konstantin Sitkin
+ * @created by   : 2022-08-09
+**/
 @IsTest
 private class KPN_OrderItemSelectorTest {
 
