--- a/force-app/main/default/classes/KPN_AppConstants.cls
+++ b/force-app/main/default/classes/KPN_AppConstants.cls
@@ -1,4 +1,9 @@
+/**
+ * @description  : KPN App Constants
+ * can be further configured with custom metadata or setting
+ * @author       : Konstantin Sitkin
+ * @created by   : 2022-08-09
+ **/
 public class KPN_AppConstants {
     public static Integer PRODUCTS_PAGE_SIZE = 5;
-    
 }
