--- a/force-app/main/default/classes/KPN_OrderProductCtrl.cls
+++ b/force-app/main/default/classes/KPN_OrderProductCtrl.cls
@@ -1,7 +1,20 @@
+/**
+ * @description  : Controller for LWC kpnOrderProductCard.js
+ * @author       : Konstantin Sitkin
+ * @created by   : 2022-08-09
+**/
 public with sharing class KPN_OrderProductCtrl {
     
+    /**
+    * @description Creates or Updates OrderItem based on selected PriceBookEntry.Id 
+    * @author Konstantin Sitkin | 2022-08-09 
+    * @param orderId 
+    * @param pbeId 
+    * @return OrderItem 
+    **/
     @AuraEnabled(cacheable=false)
     public static OrderItem addProduct(String orderId, String pbeId) {
+        // query PBE for extra fields
         PricebookEntry pbe = [
             SELECT Id, Name, UnitPrice, Product2Id
             FROM PricebookEntry
@@ -9,6 +22,7 @@ public with sharing class KPN_OrderProductCtrl {
             WITH SECURITY_ENFORCED
             LIMIT 1
         ];
+        // get existing order items for current order
         List<OrderItem> orderItems = [
             SELECT Id, Quantity, PricebookEntryId, Product2Id, OrderId
             FROM OrderItem
@@ -31,7 +45,8 @@ public with sharing class KPN_OrderProductCtrl {
             orderItemToUpsert.Quantity += 1;
         }
         upsert orderItemToUpsert;
-
+        // return updated order item with extra fields
+        // selector and fields are the same for add and view OrderItem
         return KPN_OrderItemSelector.getById(orderItemToUpsert.Id);
     }
 }
