--- a/force-app/main/default/classes/KPN_OrderViewOrderItemsCtrl.cls
+++ b/force-app/main/default/classes/KPN_OrderViewOrderItemsCtrl.cls
@@ -1,9 +1,17 @@
+/**
+ * @description  : Controller for LWC kpnOrderViewOrderItems.js
+ * @author       : Konstantin Sitkin
+ * @created by   : 2022-08-09
+ **/
 public with sharing class KPN_OrderViewOrderItemsCtrl {
-    
+    /**
+     * @description Extracts OrderItems for current Order
+     * @author Konstantin Sitkin | 2022-08-09
+     * @param orderId
+     * @return List<OrderItem>
+     **/
     @AuraEnabled(cacheable=false)
     public static List<OrderItem> getOrderItems(String orderId) {
         return KPN_OrderItemSelector.getByOrderId(orderId);
     }
-
-    
 }
