--- a/force-app/main/default/classes/KPN_AppConstants.cls
+++ b/force-app/main/default/classes/KPN_AppConstants.cls
@@ -6,4 +6,6 @@
  **/
 public class KPN_AppConstants {
     public static Integer PRODUCTS_PAGE_SIZE = 20;
+
+    public static String ORDER_STATUS_ACTIVATED = 'Activated';
 }
