added mocks, test coverage, fixed error response order confirmation

--- a/force-app/main/default/classes/controllers/KPN_OrderConfirmationCtrl.cls
+++ b/force-app/main/default/classes/controllers/KPN_OrderConfirmationCtrl.cls
@@ -9,7 +9,9 @@ public with sharing class KPN_OrderConfirmationCtrl {
         apiHandler.setOrderItems(currentOrder.OrderItems);
         KPN_ExternalSystemResponse apiRes = apiHandler.doPost();
         System.debug(apiRes);
-
+        if (apiRes.isSuccess == false) {
+            throw new KPN_ExternalSystemPostOrderApiHandler.KPN_ExternalSystemPostOrderException(apiRes.rawJson);
+        }
         currentOrder.Status = KPN_AppConstants.ORDER_STATUS_ACTIVATED;
         update currentOrder;
     }
