--- a/force-app/main/default/classes/externalSystem/KPN_ExternalSystemApiHandler.cls
+++ b/force-app/main/default/classes/externalSystem/KPN_ExternalSystemApiHandler.cls
@@ -1,2 +1,7 @@
+/**
+ * @description  : External System Handlers interface
+ * @author       : Konstantin Sitkin
+ * @created by   : 2022-08-10
+**/
 public interface KPN_ExternalSystemApiHandler {
 }
