--- a/force-app/main/default/classes/externalSystem/KPN_ExternalSystemResponse.cls
+++ b/force-app/main/default/classes/externalSystem/KPN_ExternalSystemResponse.cls
@@ -1,3 +1,8 @@
+/**
+ * @description  : External System common response
+ * @author       : Konstantin Sitkin
+ * @created by   : 2022-08-10
+**/
 public class KPN_ExternalSystemResponse {
     public Boolean isSuccess;
     public String rawJson;
@@ -5,9 +10,5 @@ public class KPN_ExternalSystemResponse {
     public KPN_ExternalSystemResponse() {
         this.isSuccess = true;
         this.rawJson = '';
-    }
-
-    public KPN_ExternalSystemResponse parse(String jsonStr) {
-        return new KPN_ExternalSystemResponse();
     }
 }
